fixed header z-index

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -7,6 +7,7 @@ header {
    top: 0;
    width: 100%;
    height: 75px;
+   z-index: 10;
    
    nav a {
       color: $clr2;
